
2010-02-20  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp: Remove outdated comment at the beginning
	since it may be misleading.

	* slime.el: In minor-mode-alist for slime-popup-buffer-mode,
	run slime-modeline-string only if slime-mode isn't active, because
	slime-mode runs slime-modeline-string from minor-mode-alist too
	resulting in duplicate modeline strings.
	Reported by Leo Liu.

2010-02-18  Mark Harig <idirectscm@aim.com>

	The compiler warns about various stuff. Fix some of it.

	* slime.el (slime-add-local-hook): Remove support for Emacs 20.
	(sldb-recenter-region): Use forward-line; not next-line.

2010-02-17  Helmut Eller  <heller@common-lisp.net>

	Add a command to eval stuff in the inspector.

	* slime.el (slime-inspector-eval): New command.
	(slime-inspector-mode-map): Bind it to 'e'.
	* swank.lisp (inspector-eval): New function.
	* swank-backend.lisp (eval-context): New function.
	* swank-cmucl.lisp (eval-context): Implement it.

2010-02-17  Helmut Eller  <heller@common-lisp.net>

	Point-entered hooks in the xref buffer don't work so well.
	Use forward/backward commands instead.

	* slime.el (slime-xref-next-line, slime-xref-prev-line): New
	commands.
	(slime-xref-show-location): New aux function.
	(slime-xref-mode-map): Remap up/down to next/prev location
	commands.  Make SPC and RET do the same.

2010-02-17  Helmut Eller  <heller@common-lisp.net>

	Select the xref buffer.
	I never could get used to the next/prev cycling.

	* slime.el (slime-with-xref-buffer): Select the buffer.
	(slime-insert-xrefs): Add point-entered hook to automatically
	display the current location.
	(slime-xref-entered): New function.
	(slime-show-buffer-position): Don't use reposition-window which
	seems very slow and doesn't even do a particularly good job.  The
	new heuristic is much cruder but faster.
	(slime-xref-mode-map): Remove apparently redundant bindings for
	RET.

2010-02-17  Helmut Eller  <heller@common-lisp.net>

	Get rid or snapshots.
